manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todolist-app
  labels:
    app.kubernetes.io/name: todolist-app
    app.kubernetes.io/part-of: todolist-stack
