manifest/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: todolist-app
spec:
  ingressClassName: nginx
  rules:
  - host: todolist.app.thaiopenstack.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
